# autoresearch-qc

./: .gitignore  LICENSE  README.md  analysis.ipynb  circuit.py  discovery_report.md  noisy_circuit.py  optimize.py  optimize_noisy.py  phase_agent.py  phase_diagram_report.md  phase_scan.py  plot.py  plot_agent_comparison.py  plot_phase_diagram.py  plot_validation.py  prepare.py  program.md  program_noisy.md  pyproject.toml  validate_sweep.py
docs/: agentic_report.md  discovery_report.md  phase_diagram_report.md  reproducibility.md
molecules/: README.md  beh2.yaml  h2.yaml  h2o.yaml  h4_chain.yaml  lih.yaml
