[project]
name = "autoresearch-qc"
version = "0.1.0"
description = "Autonomous quantum circuit research via LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pennylane>=0.39",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]
